--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.5.0",
+    "@xyflow/react": "^12.0.4",
     "clsx": "^2.1.1",
     "next": "14.2.5",
     "react": "^18",
@@ -19,6 +20,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
+    "sass": "^1.77.8",
     "tailwindcss": "^3.4.1"
   }
 }
