--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.5.0",
+    "@reduxjs/toolkit": "^2.2.7",
     "@xyflow/react": "^12.0.4",
     "clsx": "^2.1.1",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-redux": "^9.1.2",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "eslint": "^8",
